--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=dopta;uid=root;password=toor"
+  },
   "AllowedHosts": "*"
 }
